# SystemRay

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
ai/: assistant.py  prompt.py
languages/: translations.json
src/: config.py  database.py  gui.py  metrics.py  models.py
system/: cleaner.py  scanner.py
tests/: local_test.py
utils/: worker.py
