[project]
name = "systemray"
version = "0.1.0"
description = "GUI system manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.16",
    "iniconfig==2.3.0",
    "keyring>=25.7.0",
    "packaging==26.2",
    "pillow>=12.2.0",
    "pluggy==1.6.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pyinstaller>=6.20.0",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
